add web delivery resource script

--- a/msfconsole.rc
+++ b/msfconsole.rc
@@ -1,6 +1,7 @@
 load pentest
 load alias
 alias multihandler "resource multihandler.rc"
+alias web_delivery "resource web_delivery.rc"
 setg exitonsession false
 setg MeterpreterUserAgent "Mozilla/4.0 (compatible; MSIE 8.0; Windows NT 6.0; Win64; x64; Trident/4.0)"
 setg MeterpreterServerName "Microsoft-IIS/8.0"
